--- a/plugin.xml
+++ b/plugin.xml
@@ -1,26 +1,18 @@
 <?xml version='1.0' encoding='utf-8'?>
 <plugin id="cordova-plugin-statusbarnotification" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
-    <name>StatusBarNotification</name>
-    <description>Status bar notification for iOS</description>
+	<name>StatusBarNotification</name>
+	<description>Cordova Status Bar Notification </description>
 	<license>MIT</license>
-	<keywords>Status bar notification, notifications, status bar</keywords>
-
-	<engines>
-  		<engine name="cordova-android" version=">=4.0.0" />
-	</engines>
-
-    <js-module name="StatusBarNotification" src="www/StatusBarNotification.js">
-        <clobbers target="StatusBarNotification" />
-    </js-module>
-
+	<keywords>cordova, status bar, notification</keywords>
+	<js-module name="StatusBarNotification" src="www/StatusBarNotification.js">
+		<clobbers target="StatusBarNotification" />
+	</js-module>
 	<platform name="ios">
-	  <config-file target="config.xml" parent="/*">
-	    <feature name="StatusBarNotification">
-	      <param name="ios-package" value="StatusBarNotification" />
-	    </feature>
-	  </config-file>
-	  <header-file src="src/ios/StatusBarNotification.h" />
-	  <source-file src="src/ios/StatusBarNotification.m" />
+		<config-file parent="/*" target="config.xml">
+			<feature name="StatusBarNotification">
+				<param name="ios-package" value="StatusBarNotification" />
+			</feature>
+		</config-file>
+		<source-file src="src/ios/StatusBarNotification.m" />
 	</platform>
-
 </plugin>
