--- a/plugin.xml
+++ b/plugin.xml
@@ -13,6 +13,7 @@
 				<param name="ios-package" value="StatusBarNotification" />
 			</feature>
 		</config-file>
+		<header-file src="src/ios/StatusBarNotification.h" />
 		<source-file src="src/ios/StatusBarNotification.m" />
 	</platform>
 </plugin>
